discord contact added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			  <a href="https://github.com/gio2271" target="_blank"><i class='fab fa-github'></i></a>
 
 			  <a href="https://www.youtube.com/channel/UCaH1-2oorHzJs0w4YbeaM9w" target="_blank"><i class="fab fa-youtube"></i></a>
+			   <a href="http://discordapp.com/users/470290141999661056" target="_blank"><i class="fab fa-discord"></i></a>
 		    </div>
 		  </div>
 
